# shoebox

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  book.toml  config.toml  diesel.toml  docker-compose.yml  index.yaml  package-lock.json  package.json  tailwind.config.js  tailwind.css
.github/workflows/: build-and-publish.yml  helm-release.yml  mdbook.yml  release.yml  rust-clippy.yml  shoebox.yml
charts/shoebox/: Chart.yaml  README.md  values-full.yaml  values.yaml
charts/shoebox/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  statefulset.yaml
docs/: SUMMARY.md  configuration.md  index.md  installation.md  introduction.md  usage.md
docs/installation/: helm-chart.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  main.tsx  theme.ts
frontend/src/api/: client.ts
migrations/: 20240101000000_initial_schema.sql  20240601000000_add_exif_data.sql  20240609000000_remove_duplicate_videos.sql  20240610000000_add_unique_constraint_to_file_path.sql  20250522000000_add_duration_column.sql  20250523000000_add_original_file_path_column.sql  20250524000000_add_location_and_event_columns.sql  20250525000000_add_shoeboxes.sql
migrations/2024-12-01-164008_media_files/: down.sql  up.sql
migrations/2025-01-02-094055_media/: down.sql  up.sql
migrations/2025-01-02-113242_tags/: up.sql
migrations/2025-01-02-113246_people/: down.sql  up.sql
migrations/2025-01-02-113543_media_tags/: down.sql  up.sql
migrations/2025-01-03-105316_media_view/: down.sql  up.sql
migrations/2025-01-03-202552_media_people/: down.sql  up.sql
src/: app.rs  config.rs  db.rs  error.rs  lib.rs  lib_models.rs  main.rs  models.rs  schema.rs  settings.rs
src/components/: alert.rs  media_card.rs  media_card_review.rs  metadata_form.rs  mod.rs  remove_handlers.rs  shadcn_button.rs  shadcn_input.rs  utils.rs  video_player.rs
src/database/: mod.rs  pg_calls.rs  pg_conn.rs  pg_deletes.rs  pg_inserts.rs  pg_updates.rs
src/db/: db_calls.rs  models.rs
src/filesystem/: exif_parse.rs  exif_test.rs  fs_prepare.rs  fs_watcher.rs  mod.rs
src/immich/: albums.rs  mod.rs  models.rs
src/models/: person.rs  shoebox.rs  tag.rs  video.rs
src/old/: lib.rs  schema.rs
src/old/db/: db_calls.rs  (+1 more)
src/pages/: browse.rs  homepage.rs  metadata_form.rs  mod.rs  review.rs  review_old.rs  search.rs  test_form.rs
src/routes/: event.rs  export.rs  location.rs  media.rs  mod.rs  person.rs  scan.rs  shoebox.rs  system.rs  tag.rs  video.rs
src/services/: event.rs  export.rs  location.rs  mod.rs  person.rs  scanner.rs  shoebox.rs  tag.rs  thumbnail.rs  video.rs
src/utils/: file.rs
style/: main.scss  shoebox.css
(+14 files in other folders)
