[package]
name = "family_video_organizer"
version = "0.1.0"
edition = "2024"
description = "A web application for organizing family videos"
authors = ["Developer"]

[dependencies]
# Web framework
axum = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "fs", "trace"] }
hyper = { version = "1.0.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.0", features = ["tokio"] }

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "time", "json"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.50"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Environment variables
dotenv = "0.15.0"
config = "0.13.4"

# FFmpeg
# The application uses the system's FFmpeg binary directly via std::process::Command
# No FFmpeg wrapper library is needed

# File operations
walkdir = "2.4.0"
tokio-util = { version = "0.7.10", features = ["io"] }
bytes = "1.5.0"
mime_guess = "2.0.4"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
mockall = "0.12.1"
tempfile = "3.8.1"
