[package]
name = "shoebox"
version = "0.0.4"
edition = "2021"
description = "A digital shoebox for organizing and preserving your videos"
authors = ["Developer"]

[dependencies]
# Web framework
axum = "0.8.4"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "time", "json", "chrono"] }

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Environment variables
dotenv = "0.15.0"

# FFmpeg
# The application uses the system's FFmpeg binary directly via std::process::Command
# No FFmpeg wrapper library is needed

# File operations
walkdir = "2.5.0"
tokio-util = { version = "0.7.16", features = ["io"] }
bytes = "1.10.1"
mime_guess = "2.0.5"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Static file serving
tower-http = { version = "0.6.6", features = ["fs"] }
